[gd_scene load_steps=2 format=3 uid="uid://cicmyg4bo2ywm"]

[ext_resource type="Script" path="res://weapons/weapon sub nodes/hit_box.gd" id="1_yks8c"]

[node name="HitBox" type="Area2D" groups=["HitBox"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_yks8c")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
